--- a/src/css/main.css
+++ b/src/css/main.css
@@ -151,7 +151,8 @@ a{
     padding: 20px;
 	font-size: 3.5em;
     text-align: center;
-    text-decoration: none;
+	text-decoration: none;
+	transition: opacity 0.2s ease-in-out;
 }
 .fab:hover {
     opacity: 0.7;
@@ -184,7 +185,7 @@ a{
 	display: grid; /* Hidden by default */
 	opacity: 0;
 	position: fixed; /* Fixed/sticky position */
-	bottom: 10px; /* Place the button at the bottom of the page */
+	bottom: 2rem;
 	right: 5%; /* Place the button 30px from the right */
 	z-index: 99; /* Make sure it does not overlap */
 	border: none; /* Remove borders */
