--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -41,6 +41,7 @@ a{
 .btn, .btn-auto{
     outline: none;
     border: none;
+    cursor: pointer;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
 }
@@ -83,25 +84,44 @@ a{
 .btn-form-insert:hover{
     opacity: 0.7;
 }
-.table {
+.table-col-4 {
     /* display: grid; */
     display: none;
     margin: 1rem 0;
-    grid-template-columns: 1fr 4fr 3fr 3fr 4fr;
+    /* grid-template-columns: 1fr 4fr 3fr 3fr 4fr; */
+    grid-template-columns: 4fr 4fr 4fr 4fr;
+}
+.table-col-2 {
+    /* display: grid; */
+    display: none;
+    margin: 1rem 0;
+    grid-template-columns: 1fr 1fr;
 }
 
-.table > span {
-    /* padding: 8px 4px; */
+.table-col-4 > span, .table-col-2 > span {
     border-bottom: 1px solid silver;
+    padding: 1rem 0;
 }
-.table > .table-header {
+.table-header {
     font-weight: bold;
+}
+button.add-col-2{
+    grid-column-start: 2;
+    width: fit-content;
+    justify-self: end;
+}
+.action-icons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.action-icons img{
+    width: 20px;
 }
 .dashboard{
     display: grid;
     grid-template-rows: auto;
     grid-gap: 1.5rem;
-    margin: 2rem 0;
+    margin: 0rem 0rem 2rem 0rem
 }
 .user-info{
     display: grid;
@@ -111,11 +131,15 @@ a{
 .user-info > img{
     justify-self: center;
     border-radius: 50px;
+    width: 220px;
 }
-.user-info .user-settings{
+.user-info .user-options{
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+}
+.user-options img{
+    width: 35px;
 }
 .user-name{
     display: grid;
