--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -84,12 +84,12 @@ a{
 .btn-form-insert:hover{
     opacity: 0.7;
 }
-.table-col-4 {
+.table-col-5 {
     /* display: grid; */
     display: none;
     margin: 1rem 0;
     /* grid-template-columns: 1fr 4fr 3fr 3fr 4fr; */
-    grid-template-columns: 4fr 4fr 4fr 4fr;
+    grid-template-columns: 4fr 4fr 4fr 2fr 4fr;
 }
 .table-col-2 {
     /* display: grid; */
