--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -18,6 +18,45 @@ body,html{
 a{
 	text-decoration: none;
 }
+label{
+    font-weight: bold;
+}
+#settings-overlay{
+    display: none; /*change to debugg*/
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 200%;
+    width: 100%;
+    z-index: 1;
+}
+.admin-settings{
+    background-color: white;
+    width: 80%;
+    height: fit-content;
+    margin: 50% auto 0 auto;
+    display: grid;
+    grid-template-columns: 1;
+    grid-auto-rows: min-content;
+    grid-gap: 0.5rem;
+    border-radius: 5px;
+}
+.admin-settings > button {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: fit-content;
+}
+.admin-settings > div, .admin-settings > form {
+    margin: 0 0.5rem 0 0.5rem;
+    grid-gap: 1rem;
+}
+.admin-settings > :last-child{
+    margin-bottom: 1.5rem !important;
+}
+.admin-add-new{
+    display: none;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+}
 .hide{
     display: none !important;
 }
@@ -69,8 +108,10 @@ a{
 .btn-secondary:hover{
     opacity: 0.7;
 }
-.btn-form-insert{
+.btn-col-right{
     grid-column-start: 2;
+}
+.btn-form-insert{
     width: fit-content;
     justify-self: right;
     background-color: darkseagreen;
@@ -90,6 +131,12 @@ a{
     margin: 1rem 0;
     /* grid-template-columns: 1fr 4fr 3fr 3fr 4fr; */
     grid-template-columns: 4fr 4fr 4fr 2fr 4fr;
+}
+.table-col-3 {
+    /* display: grid; */
+    display: none;
+    margin: 1rem 0;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .table-col-2 {
     /* display: grid; */
@@ -165,3 +212,4 @@ button.add-col-2{
     outline: none;
     border-bottom: 1px solid lightgray;
 }
+
