--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -65,7 +65,7 @@ label{
     width: 100%;
     z-index: 5;
 }
-.edit-admin-form{
+.edit-form{
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
@@ -77,7 +77,7 @@ label{
     border-radius: 5px;
     padding: 1rem;
 }
-.edit-admin-buttons{
+.edit-btns{
     display: grid; 
     grid-template-rows: 1fr; 
     grid-template-columns: 1fr 1fr
