Admin is now able to add multiple flavours when adding or editing the product.

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -16,7 +16,8 @@ body,html{
     padding:0; 
 }
 a{
-	text-decoration: none;
+    text-decoration: none;
+    cursor: pointer;
 }
 label{
     font-weight: bold;
