--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -67,6 +67,9 @@ label{
     z-index: 5;
 }
 .edit-form{
+/*     position: fixed;
+    top: 15%;
+    left: 10%; */
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
@@ -211,7 +214,7 @@ button.add-col-2{
 .user-info > img{
     justify-self: center;
     border-radius: 50px;
-    width: 220px;
+    width: 200px;
 }
 .user-info .user-options{
     display: grid;
