--- a/src/css/main.css
+++ b/src/css/main.css
@@ -588,6 +588,20 @@ __________
 	grid-column-start: 1;
 	grid-column-end: 3;
 }
+#instafeed > a > div{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute; 
+	width: inherit; 
+	height: inherit;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	transition: opacity .2s ease-in-out;
+}
+#instafeed > a:hover > div{
+	opacity: 1;
+}
 /*
 __________
 
