--- a/src/css/main.css
+++ b/src/css/main.css
@@ -222,19 +222,20 @@ a{
 	color: dimgray;
 }
 .btn-send{
-	color: var(--card-dark-light-color);
-	background-color: var(--card-light-light-color);
+	color: white;
+    background-color: var(--fourth-color);
 	border: none;
     width: fit-content;
     outline: 20px;
     border-radius: 2px;
 	transition: all 0.2s ease-in-out;
 	justify-self: end;
+	cursor:pointer;
 }
 .btn-send:hover{
 	/* box-shadow: inset 0px 0px 10px var(--card-dark-dark-color); */
-	background-color: #f8a67a;
-	color: white;
+	color: gray;
+	background-color: var(--card-dark-dark-color);
 }
 /* 
 __________
@@ -509,8 +510,7 @@ __________
 	font-family: 'Montserrat','Roboto' ;
 	font-weight: bold;
 }
-.static p{
-	padding: 0;
+section > div > p{
 	margin: 0 0 1rem 0;
 }
 .bg1 > div{
@@ -827,6 +827,13 @@ __________
 	.logo-landing-page {
 		width: 160px;
 		margin-top: -56px;
+	}
+	.static h1{
+		padding: 0em 2.5em;
+		text-decoration-line: underline;
+	}
+	section > div > p, .flip-card-grid, .contact-wrapper, #instafeed{
+		padding: 0.5em 5em;
 	}
 	.bg1 > div{
 		margin-top: -60vh;
