--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,9 +18,11 @@
 	box-sizing: border-box;
 }
 body,html{
+	max-width: 100%;
 	margin:0;
 	padding:0; 
 	overflow-y: hidden;
+    overflow-x: hidden;
 }
 a{
 	text-decoration: none;
@@ -44,7 +46,7 @@ a{
 	justify-content: center !important;
 }
 .hide{
-	display: none;
+	display: none !important;
 }
 .show{
 	display: inline;
@@ -133,7 +135,7 @@ a{
 }
 .parallax-wrapper {
 	height: 100vh;
-	overflow-x: hidden;
+	overflow-x: auto;
 	overflow-y: auto;
 	perspective: 2;
 }
@@ -647,7 +649,7 @@ __________
 /*
 __________
 
-PARALLAX FLIPPING CARD END
+PARALLAX FLIPPING CARD START
 __________
 
 */
@@ -770,6 +772,81 @@ __________
 __________
 
 PARALLAX FLIPPING CARD END
+__________
+
+*/
+
+/*
+__________
+
+SPINNER/LOADING START
+__________
+
+*/
+#lds-ellipsis {
+	display: inline-block;
+	position: relative;
+	width: 50%;
+	/* width: 64px; */
+	/* height: 64px; */
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: -12%;
+  }
+  #lds-ellipsis div {
+	position: absolute;
+	top: 27px;
+	width: 11px;
+	height: 11px;
+	border-radius: 50%;
+	background: rgb(255, 228, 181);
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  #lds-ellipsis div:nth-child(1) {
+	left: 6px;
+	animation: lds-ellipsis1 0.6s infinite;
+  }
+  #lds-ellipsis div:nth-child(2) {
+	left: 6px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  #lds-ellipsis div:nth-child(3) {
+	left: 26px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  #lds-ellipsis div:nth-child(4) {
+	left: 45px;
+	animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+	0% {
+	  transform: scale(0);
+	}
+	100% {
+	  transform: scale(1);
+	}
+  }
+  @keyframes lds-ellipsis3 {
+	0% {
+	  transform: scale(1);
+	}
+	100% {
+	  transform: scale(0);
+	}
+  }
+  @keyframes lds-ellipsis2 {
+	0% {
+	  transform: translate(0, 0);
+	}
+	100% {
+	  transform: translate(19px, 0);
+	}
+  }
+  
+/*
+__________
+
+SPINNER/LOADING END
 __________
 
 */
