--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -66,7 +66,7 @@ label{
     width: 100%;
     z-index: 5;
 }
-.edit-form{
+.edit-form-layout{
 /*     position: fixed;
     top: 15%;
     left: 10%; */
