Spinner appears when editing files

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -47,7 +47,7 @@ label{
     width: fit-content;
 }
 .admin-settings > div, .admin-settings > form {
-    margin: 0 0.5rem 0 0.5rem;
+    margin: 0 1rem;
     grid-gap: 1rem;
 }
 .admin-settings > :last-child{
@@ -70,16 +70,27 @@ label{
 /*     position: fixed;
     top: 15%;
     left: 10%; */
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
+    
+
     background-color: white;
     width: 80%;
     height: fit-content;
+    max-height: 480px;
     margin: 50% auto 0 auto;
-    grid-gap: 0.5rem;
+    
     border-radius: 5px;
     padding: 1rem;
+}
+.edit-form-layout form{
+    display: grid;    
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    grid-gap: 0.5rem;
+}
+.status-message{
+    margin: .5rem 0;
+    text-align: center;
+    font-weight: bold;
 }
 .edit-btns{
     display: grid; 
@@ -165,11 +176,13 @@ label{
     /* display: grid; */
     display: none;
     margin: 1rem 0;
+    font-size: .85em;
     /* grid-template-columns: 1fr 4fr 3fr 3fr 4fr; */
     grid-template-columns: 4fr 4fr 4fr 2fr 4fr;
 }
 .table-col-3 {
     /* display: grid; */
+    font-size: .85em;
     display: none;
     margin: 1rem 0;
     grid-template-columns: 1fr 1fr 1fr;
@@ -254,3 +267,98 @@ button.add-col-2{
     padding: 2px 5px;
 }
 
+/* SPINNER START*/
+
+.sk-folding-cube {
+/*     margin: 20px auto;
+    width: 40px;
+    height: 40px; */
+    margin: 8px auto;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+    position: relative;
+    -webkit-transform: rotateZ(45deg);
+            transform: rotateZ(45deg);
+  }
+  
+  .sk-folding-cube .sk-cube {
+    float: left;
+    width: 50%;
+    height: 50%;
+    position: relative;
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1); 
+  }
+  .sk-folding-cube .sk-cube:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+            animation: sk-foldCubeAngle 2.4s infinite linear both;
+    -webkit-transform-origin: 100% 100%;
+        -ms-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+  }
+  .sk-folding-cube .sk-cube2 {
+    -webkit-transform: scale(1.1) rotateZ(90deg);
+            transform: scale(1.1) rotateZ(90deg);
+  }
+  .sk-folding-cube .sk-cube3 {
+    -webkit-transform: scale(1.1) rotateZ(180deg);
+            transform: scale(1.1) rotateZ(180deg);
+  }
+  .sk-folding-cube .sk-cube4 {
+    -webkit-transform: scale(1.1) rotateZ(270deg);
+            transform: scale(1.1) rotateZ(270deg);
+  }
+  .sk-folding-cube .sk-cube2:before {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+  }
+  .sk-folding-cube .sk-cube3:before {
+    -webkit-animation-delay: 0.6s;
+            animation-delay: 0.6s; 
+  }
+  .sk-folding-cube .sk-cube4:before {
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s;
+  }
+  @-webkit-keyframes sk-foldCubeAngle {
+    0%, 10% {
+      -webkit-transform: perspective(140px) rotateX(-180deg);
+              transform: perspective(140px) rotateX(-180deg);
+      opacity: 0; 
+    } 25%, 75% {
+      -webkit-transform: perspective(140px) rotateX(0deg);
+              transform: perspective(140px) rotateX(0deg);
+      opacity: 1; 
+    } 90%, 100% {
+      -webkit-transform: perspective(140px) rotateY(180deg);
+              transform: perspective(140px) rotateY(180deg);
+      opacity: 0; 
+    } 
+  }
+  
+  @keyframes sk-foldCubeAngle {
+    0%, 10% {
+      -webkit-transform: perspective(140px) rotateX(-180deg);
+              transform: perspective(140px) rotateX(-180deg);
+      opacity: 0; 
+    } 25%, 75% {
+      -webkit-transform: perspective(140px) rotateX(0deg);
+              transform: perspective(140px) rotateX(0deg);
+      opacity: 1; 
+    } 90%, 100% {
+      -webkit-transform: perspective(140px) rotateY(180deg);
+              transform: perspective(140px) rotateY(180deg);
+      opacity: 0; 
+    }
+  }
+
+/* SPINNER END*/
