--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -14,6 +14,7 @@
 body,html{
 	margin:0;
     padding:0; 
+    position: relative;
 }
 a{
     text-decoration: none;
@@ -34,7 +35,7 @@ label{
     background-color: white;
     width: 80%;
     height: fit-content;
-    margin: 50% auto 0 auto;
+    margin: 10vh auto 0 auto;
     display: grid;
     grid-template-columns: 1;
     grid-auto-rows: min-content;
@@ -67,16 +68,15 @@ label{
     z-index: 5;
 }
 .edit-form-layout{
-/*     position: fixed;
+    position: fixed;
     top: 15%;
-    left: 10%; */
+    left: 10%;
     
 
     background-color: white;
     width: 80%;
     height: fit-content;
     max-height: 480px;
-    margin: 50% auto 0 auto;
     
     border-radius: 5px;
     padding: 1rem;
