--- a/src/css/main.css
+++ b/src/css/main.css
@@ -335,8 +335,8 @@ __________
 	height: 0; 
 	justify-self: center;
 	border: 7px solid transparent;
-    border-top: 8px solid gray;
-    border-bottom: 0 none;
+	border-top: 8px solid gray;
+	border-bottom: 0 none;
 	margin-top: -10px;
 
 	/* The commented code is used for wider screens */
@@ -351,14 +351,47 @@ __________
 	text-shadow: 2px 1px 3px black;
 	box-shadow: 0px 0px 5px 1px var(--fourth-color);
 }
+.calendar-language-delimiter{
+	margin-top: 2.5rem;
+	display: grid;
+	grid-template-columns: repeat(15, 1fr);
+	width: 100%;
+}
+.calendar-language-delimiter .custom-select{
+	grid-column-start: 15;
+	grid-column-end: 16;
+	width: fit-content;
+	height: fit-content;
+	margin: auto;
+	font-size: 0.8rem;
+}
+.custom-select select{
+	border-radius: 2px;
+	padding: 0.5rem;
+	outline: none;
+	border: none;
+	background-color: var(--second-color);
+	color: var(--fourth-color);
+	font-weight: bold;
+	width: 50px;
+}
+.custom-select select .lang-display-short{
+	display: inline;
+}
+.custom-select select .lang-display-long{
+	display: none;
+}
 #show-locator{
-	margin-top: 1rem;
-    color: var(--fourth-color);
-    font-weight: bold;
+	color: var(--fourth-color);
+	font-weight: bold;
+	align-self: end;
+	grid-column-start: 2;
+	grid-column-end: 15;
 }
 .show-locator-toggle{
 	margin-top: 0 !important;
 }
+
 /* 
 __________
 
@@ -867,6 +900,9 @@ __________
 
 */
 @media (min-width: 375px) {
+	.calendar-language-delimiter{
+		margin-top: 1rem;
+	}
 	.footer .contact-information, .footer .footer-surplus{
 		font-size: 0.8em;
 	}
@@ -970,6 +1006,15 @@ __________
 	.main-header > .nav-toggle {
 		margin-left: -70px;
 	}
+	.custom-select select{
+		width: auto;
+	}
+	.custom-select select .lang-display-short{
+		display: none;
+	}
+	.custom-select select .lang-display-long{
+		display: inline-block;
+	}
 	.bg1 > div {
 		font-size: 2em;
 	}
@@ -1066,6 +1111,9 @@ __________
 		width: 46px;
 		height: 7px;
 	}
+	.calendar-language-delimiter {
+		margin-top: 1rem;
+	}	
 	.logo-container-outer{
 		display: none;
 	}
