--- a/src/css/main.css
+++ b/src/css/main.css
@@ -277,8 +277,10 @@ a{
 	border-radius: 2px;
 	outline: none;
 	padding: 0.4em;
-	background-color: transparent;
+	/* background-color: transparent; */
+	background-color: rgba(255,255,255, 0.4);
 	color: var(--fourth-color);
+	/* color: rgb(255,255,255); */
 	box-shadow: 0 9px 4px -8px var(--fourth-color);
 }
 .btn-send{
@@ -695,7 +697,7 @@ section > div > p{
 }
 #contacts > .contact-wrapper .contact-form-wrapper{
 	padding: 10px;
-    border-radius: 10px;
+  border-radius: 5px;
 	border: 3px solid;
 	border-color: rgba(222, 184, 135, 0.5);
 	background-color:rgba(222, 184, 135, 1);
