--- a/client_side/src/css/dashboard.css
+++ b/client_side/src/css/dashboard.css
@@ -32,6 +32,7 @@ label{
     z-index: 1;
 }
 .admin-settings{
+    max-width: 600px;
     background-color: white;
     width: 80%;
     height: fit-content;
