Corrected some js and php, whenever user sucessfully creates a row,the green text appears confirming

--- a/client_side/src/css/dashboard.css
+++ b/client_side/src/css/dashboard.css
@@ -102,6 +102,8 @@ content{
     margin: .5rem 0;
     text-align: center;
     font-weight: bold;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 .edit-btns{
     display: grid; 
