Removed background from produt img, since no img are available atm

--- a/client_side/src/css/main.css
+++ b/client_side/src/css/main.css
@@ -740,6 +740,9 @@ __________
 	transform-style: preserve-3d;
 	/* perspective: 700; */
 }
+.front{
+    background-color: white;
+}
 .front,
 .back{
 	background-size: cover;
