--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,24 +70,25 @@ a{
 	top: 0;
 	z-index: 99999;
 	padding: 5px;
-	background-color: rgb(250, 128, 114);
-	box-shadow: 0px 3px 10px 0px rgb(250, 128, 114);
+	background-color: rgb(50, 90, 90);
+	box-shadow: 0 3px 6px -4px white;
 	transition: opacity 0.2s ease-in-out;
 }
 .cookie-modal .btn{
 	color: white;
 	padding: 4px;
-	background-color: salmon;
-	box-shadow: 0px 11px 0px -10px slategrey;
+	background-color: transparent;
+	box-shadow: 0px 11px 0px -10px white;
 	justify-self: center!important;
+	border-radius: 5px;
 }
 .cookie-modal .btn:hover {
-	background-color: rgba(250, 128, 114, 0.5);
+	background-color: transparent;
 	color: rgba(255,255,255, 0.7);
-	box-shadow: 0 7px 0px -5px #708090;
+	box-shadow: 0 6px 0px -5px rgba(255,255,255, 0.7);
 }
 .cookie-modal .btn:active {
-	background-color: rgb(255,255,255);
+	background-color: transparent;
 	color: black;
 	box-shadow: none;
 }
