--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,22 +70,22 @@ a{
 	top: 0;
 	z-index: 99999;
 	padding: 5px;
-	background-color: rgb(50, 90, 90);
-	box-shadow: 0 3px 6px -4px white;
+	background-color: white;
+	box-shadow: 0 3px 6px -4px rgb(50, 90, 90);
 	transition: opacity 0.2s ease-in-out;
 }
 .cookie-modal .btn{
-	color: white;
+	color: rgb(50, 90, 90);
 	padding: 4px;
 	background-color: transparent;
-	box-shadow: 0px 11px 0px -10px white;
+	box-shadow: 0px 11px 0px -10px rgb(50, 90, 90);
 	justify-self: center!important;
 	border-radius: 5px;
 }
 .cookie-modal .btn:hover {
 	background-color: transparent;
-	color: rgba(255,255,255, 0.7);
-	box-shadow: 0 6px 0px -5px rgba(255,255,255, 0.7);
+	color: rgb(50, 90, 90);
+	box-shadow: 0 7px 0px -5px rgb(50, 90, 90);
 }
 .cookie-modal .btn:active {
 	background-color: transparent;
@@ -93,7 +93,7 @@ a{
 	box-shadow: none;
 }
 .cookie-modal p{
-	color: whitesmoke;
+	color: rgb(50, 90, 90);
 	padding: 5px;
 	font-size: 1.1em;
 }
