--- a/front_end/src/css/main.css
+++ b/front_end/src/css/main.css
@@ -70,22 +70,22 @@ a{
 	top: 0;
 	z-index: 99999;
 	padding: 5px;
-	background-color: white;
+	background-color: rgba(255,255,255, 0.98);;
 	box-shadow: 0 3px 6px -4px rgb(50, 90, 90);
 	transition: opacity 0.2s ease-in-out;
 }
 .cookie-modal .btn{
-	color: rgb(50, 90, 90);
+	color: rgb(128, 128, 128);
 	padding: 4px;
 	background-color: transparent;
-	box-shadow: 0px 11px 0px -10px rgb(50, 90, 90);
+	box-shadow: 0px 11px 0px -10px rgb(128, 128, 128);
 	justify-self: center!important;
 	border-radius: 5px;
 }
 .cookie-modal .btn:hover {
 	background-color: transparent;
-	color: rgb(50, 90, 90);
-	box-shadow: 0 7px 0px -5px rgb(50, 90, 90);
+	color: rgb(0,0,0);
+	box-shadow: 0 7px 0 -6px rgb(0,0,0);
 }
 .cookie-modal .btn:active {
 	background-color: transparent;
@@ -93,7 +93,7 @@ a{
 	box-shadow: none;
 }
 .cookie-modal p{
-	color: rgb(50, 90, 90);
+	color: rgb(128, 128, 128);
 	padding: 5px;
 	font-size: 1.1em;
 }
@@ -278,15 +278,13 @@ a{
 	border-radius: 2px;
 	outline: none;
 	padding: 0.4em;
-	/* background-color: transparent; */
-	background-color: rgba(255,255,255, 0.4);
 	color: var(--fourth-color);
-	/* color: rgb(255,255,255); */
-	box-shadow: 0 9px 4px -8px var(--fourth-color);
+	background-color: rgb(255,255,255);
+	border-radius: 5px;
 }
 .btn-send{
-	color: white;
-    background-color: var(--fourth-color);
+	color: var(--fourth-color);
+    background-color: rgba(255,255,255, 0.5);
 	border: none;
     width: fit-content;
     outline: 20px;
@@ -294,11 +292,11 @@ a{
 	transition: all 0.2s ease-in-out;
 	justify-self: end;
 	cursor:pointer;
+	padding: 0.5em 2.5em !important;
 }
 .btn-send:hover{
-	/* box-shadow: inset 0px 0px 10px var(--card-dark-dark-color); */
-	color: gray;
-	background-color: var(--card-dark-dark-color);
+	color: rgb(255,255,255);
+	background-color: rgba(255,255,255, 0.1);
 }
 /* 
 __________
@@ -598,6 +596,7 @@ __________
 	padding: 0em 1.3em;		
 	font-family: 'Montserrat','Roboto' ;
 	font-weight: bold;
+	text-align: justify;
 }
 section > div > p{
 	margin: 0 0 1rem 0;
@@ -1141,7 +1140,7 @@ __________
 		transition: all 0.2s ease-in-out;
 	}
 	.nav-contact-info a:hover{
-		color: white;
+		color: rgb(255,255,255);
 	}
 	.main-nav > .nav-toggle {
 		display: none;
